# profile-service/src/main/java/com/ykw/profile/controller/UserProfileController.java
@@ -1,43 +1,44 @@
 package com.ykw.profile.controller;
 
-import com.ykw.profile.api.UsersApi;
-import com.ykw.profile.dto.AuthResponse;
-import com.ykw.profile.dto.UserRegisterRequest;
-import com.ykw.profile.service.JwtService;
+import com.ykw.profile.api.UserProfileApi;
+import com.ykw.profile.dto.PagedUserResponse;
+import com.ykw.profile.dto.UpdateUserProfileRequest;
+import com.ykw.profile.dto.UserProfile;
 import com.ykw.profile.service.UserProfileService;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.HttpStatus;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
-/**
- * Controller handles the user profile specific actions
- */
-@Slf4j
 @RestController
 @RequiredArgsConstructor
-public class UserProfileController implements UsersApi {
+public class UserProfileController implements UserProfileApi {
 
-    /**
-     * Holds UserService instance
-     */
-    private final UserProfileService userService;
+    private final UserProfileService userProfileService;
 
-    private final JwtService jwtService;
-
-    /**
-     *
-     * @param xTraceId Unique trace identifier used for request tracing across services (required)
-     * @param userRegisterRequest  (required)
-     * @return
-     */
     @Override
-    public ResponseEntity<AuthResponse> registerUser(final String xTraceId, final UserRegisterRequest userRegisterRequest) {
-        log.debug("method={}", "registerUser");
+    public ResponseEntity<PagedUserResponse> searchProfiles(String q, Integer page, Integer size) {
+     /*   PagedUserResponse response =
+                userProfileService.searchUsers(q, PageRequest.of(page, size));*/
 
-        return ResponseEntity
-                .status(HttpStatus.CREATED)
-                .body(userService.registerUser(userRegisterRequest));
+        return ResponseEntity.ok(null);
+    }
+
+    @Override
+    public ResponseEntity<UserProfile> getCurrentProfile() {
+        UserProfile profile = userProfileService.getCurrentUserProfile();
+        return ResponseEntity.ok(profile);
+    }
+
+    @Override
+    public ResponseEntity<UserProfile> updateCurrentProfile(UpdateUserProfileRequest request) {
+        UserProfile profile = userProfileService.upsertCurrentUserProfile(request);
+        return ResponseEntity.ok(profile);
+    }
+
+    @Override
+    public ResponseEntity<UserProfile> getProfile(Long userId) {
+        UserProfile profile = userProfileService.getUserById(userId);
+        return ResponseEntity.ok(profile);
     }
 }
